--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Oleh-Oleh Kota Sukabumi</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/assets/image/Logo.icon">
+  <link rel="icon" type="image/x-icon" href="/assets/image/Logo.ico">
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
